--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="back_button">Back</string>
     <string name="app_name">Note Takeoff</string>
     <string name="new_note">Add a New Note</string>
 </resources>
