can now add new note

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="back_button">Back</string>
     <string name="app_name">Note Takeoff</string>
     <string name="new_note">Add a New Note</string>
+    <string name="new_note_title">Title</string>
+    <string name="new_note_content">Content</string>
+    <string name="new_note_save">Save Note</string>
 </resources>
