--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,11 @@
     <string name="new_note_content">Content</string>
     <string name="new_note_save">Save Note</string>
     <string name="note_detail">Details</string>
-    <string name="edit_note">Edit Note</string>
+    <string name="edit_note">Edit</string>
+    <string name="delete_note">Delete</string>
+    <string name="more_options">More options</string>
+
+    <string name="delete_note_title">Delete Note</string>
+    <string name="delete_note_confirmation">Are you sure you want to delete this note?</string>
+    <string name="cancel">Cancel</string>
 </resources>
