--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-    <string name="back_button">Back</string>
     <string name="app_name">Note Takeoff</string>
+    <string name="search_notes">Search notes</string>
+    <string name="back_button">Back</string>
+
     <string name="add_new_note">Add a New Note</string>
     <string name="new_note_title">Title</string>
     <string name="new_note_content">Content</string>
